# RAG_Learning_Repo

./: .gitignore  README.md  pyproject.toml  requirements.txt
DataingestParsing/: CsvExelparsin.ipynb  DataParsing.ipynb  dataparsingPDF.ipynb  dataparsingWord.ipynb
Hypird search stratigy/: MMR_Retriver.ipynb  Reranking_technique.ipynb  hypird_search.ipynb
advanced chankes and preprocessing/: New Text Document.txt  semantic_chuncking.ipynb
multi-model RAG/: multi_model.ipynb
query enhancement/: decompisit_query.ipynb  query_expansion.ipynb
vector store/: chromadb.ipynb  faissdb.ipynb
vectorDB/: datastax_astraDB.ipynb  pinecone.ipynb
vectorembedding and data base/: embedding.ipynb
