[project]
name = "rag-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.5",
    "docx2txt>=0.9",
    "faiss-cpu>=1.13.2",
    "langchain>=1.2.12",
    "langchain-astradb>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-experimental>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.1",
    "langchain-openai>=1.1.11",
    "langchain-openrouter>=0.2.1",
    "langchain-pinecone>=0.2.13",
    "langchain-text-splitters>=1.1.1",
    "matplotlib>=3.10.8",
    "numpay>=0.0.8",
    "numpy>=2.4.3",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pymupdf>=1.27.2",
    "pypdf>=6.8.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.3.0",
    "tiktoken>=0.12.0",
    "unstructured[docx]>=0.21.5",
]
